# webmetic-utm-referrer-attribution-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup_dev.py  test_local_install.py
examples/: basic_usage.py  final_verification.py  google_ads_campaign_demo.py  webmetic_usage.py
tests/: test_cache.py  test_essential.py  test_google_ads_campaign.py  test_parameters.py  test_parser.py  test_referrers.py  test_tldextract_improvements.py  test_updater_essential.py  test_webmetic.py
utm_referrer_parser/: __init__.py  cache.py  parameters.py  parser.py  referrers.py  updater.py  webmetic.py
