[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utm-referrer-attribution-parser"
version = "0.1.4"
description = "Modern Python library combining referrer parsing with tracking parameter extraction for web analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Webmetic", email = "support@webmetic.de"},
]
keywords = ["utm", "referrer", "attribution", "analytics", "tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.25.0",
    "tldextract>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://webmetic.de"
Repository = "https://github.com/webmetic/utm-referrer-attribution-parser"
Issues = "https://github.com/webmetic/utm-referrer-attribution-parser/issues"
Website = "https://webmetic.de"

[tool.hatch.build.targets.wheel]
packages = ["utm_referrer_parser"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
# Minimal type checking for publication
ignore_errors = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]  # Essential linting only
ignore = ["S101", "T201"]  # Allow assert statements and print statements

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=utm_referrer_parser --cov-report=term-missing --cov-report=html"